--- a/service/css/serviceFLEX.css
+++ b/service/css/serviceFLEX.css
@@ -157,7 +157,7 @@
   position: absolute;
   display: block;
   float:right;
-  font: size 16px;
+  font-size: 16px;
   font-family: "メイリオ";
   line-height: 20px;
   z-index: 99;
